--- a/App/package.json
+++ b/App/package.json
@@ -18,12 +18,14 @@
     "debug": "^4.4.3",
     "expo": "~54.0.20",
     "expo-constants": "~18.0.10",
+    "expo-file-system": "~19.0.17",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.13",
     "expo-splash-screen": "~31.0.10",
+    "expo-sqlite": "~16.0.8",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
